5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1834_1273.log
== TEST (2019-06-27 16:40:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
b=array([50,-120,350,870])
b=b.T
print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:41:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
b=array([50,-120,350,870])
b=b.T
solucao=dot(a,b)
print(solucao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:42:29) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
b=array([50,-120,350,870])
b=b.T
solucao=solve(a,b)
print(solucao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:42:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
b=array([50,-120,350,870])
b=b.T
solucao=solve(b,a)
print(solucao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:43:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
b=array([50,-120,350,870])
b=b.T
solucao=solve(a,b)
print(solucao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:43:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
b=array([50,-120,350,870])
b=b.T
solucao=dot(inv(a),b)
print(solucao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:44:01) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
b=array([50,-120,350,870])
b=b.T
solucao=dot(a,inv(b)
print(solucao)

-- ERROR:
File "XXXX", line 7
    print(solucao)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:44:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
b=array([50,-120,350,870])
b=b.T
x=dot(a,inv(b)
print(x)

-- ERROR:
File "XXXX", line 7
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:44:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
b=array([50,-120,350,870])
b=b.T
x=dot(b,a)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:45:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
x=dot(valor,a)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:45:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
x=dot(a,valor)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:46:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
x=dot(a,valor)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:46:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
x=dot(inv(a),valor)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:47:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
x=dot(a,inv(valor))
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:50:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
result=dot(valor, inv(entradas))
print(result)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:50:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
result=dot(valor, inv(entradas))
print(result)

-- EXECUTION TIME:
0.904581
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1273/main.py", line 5, in <module>
    result=dot(valor, inv(entradas))
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 545, in inv
    _assertRankAtLeast2(a)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 207, in _assertRankAtLeast2
    'at least two-dimensional' % a.ndim)
numpy.linalg.LinAlgError: 1-dimensional array given. Array must be at least two-dimensional

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:50:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
result=dot(valor,inv(entradas))
print(result)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:50:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
result=dot(valor,inv(entradas))
print(result)

-- EXECUTION TIME:
0.934596
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1273/main.py", line 5, in <module>
    result=dot(valor,inv(entradas))
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 545, in inv
    _assertRankAtLeast2(a)
  File "/usr/local/lib/python3.4/dist-packages/numpy/linalg/linalg.py", line 207, in _assertRankAtLeast2
    'at least two-dimensional' % a.ndim)
numpy.linalg.LinAlgError: 1-dimensional array given. Array must be at least two-dimensional

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:52:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
result=dot(round(inv(valor),entradas,2))
print(result)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:53:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
result=dot(round(inv(valor),entradas),2)
print(result)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:53:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
result=dot(round((valor),inv(entradas),2)
print(result)

-- ERROR:
File "XXXX", line 7
    print(result)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:54:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
result=dot(inv(valor),entradas)
print(round(result,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:56:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
result=dot(inv(entradas),valor)
print(round(result,1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:56:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor
result=dot(inv(entradas),valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:59:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
result=dot(inv(entradas),valor)
print(result)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:59:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([[50,-120,350,870]])
valor=valor.T
result=dot(inv(entradas),valor)
print(result)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 17:00:01) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
result=dot(inv(entradas),valor)
print(result)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 17:00:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
result=dot(inv(entradas),valor)
print(result)


-- EXECUTION TIME:
1.03342
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 10:17:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
result=dot(inv(entradas),valor)
print(result)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:32:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
result=dot(inv(entradas),valor)
print(result)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:22:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
result=dot(inv(entradas),valor)
print(result)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:22:12) 
-- CODE:
from numpy import *
from numpy.linalg import *
entradas=array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
valor=array([50,-120,350,870])
valor=valor.T
result=dot(inv(entradas),valor)
print(result)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
